Adjusted Response.